[package]
name = "audio_player"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = {version = "1.2.0"}
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
rp235x-hal = { version = "0.4.0", features = ["critical-section-impl"] }

# Temp
heapless = "0.9"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
