[package]
name = "audio_player"
version = "0.1.0"
edition = "2024"

[features]
led = []
usb = ["dep:usb-device", "dep:usbd-serial"]

[dependencies]
critical-section = {version = "1.2.0"}
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
panic-halt = "0.2.0"
rp235x-hal = { version = "0.4.0", features = ["critical-section-impl"] }

usb-device = { version = "0.3.2", optional = true }
usbd-serial = { version = "0.2.2", optional = true }
